[API] Add record to favorites list
