# docs/yaml/openapi.yaml
@@ -58,7 +58,7 @@ paths:
                     description: Registration fail
     /auth/roleQuery?email={email}:
         parameters:
-            - in: path
+            - in: query
               name: email
               schema:
                   type: string
@@ -75,7 +75,7 @@ paths:
                     description: Record not found
     /dog/getDogInfo?id={id}:
         parameters:
-            - in: path
+            - in: query
               name: id
               schema:
                   type: integer
@@ -140,7 +140,7 @@ paths:
                     description: Update fail
     /dog/deleteDogInfo?id={id}:
         parameters:
-            - in: path
+            - in: query
               name: id
               schema:
                   type: integer
@@ -186,7 +186,7 @@ paths:
                     description: Dog breed not found
     /dog/getBreedImg?breed={breed}:
         parameters:
-            - in: path
+            - in: query
               name: breed
               schema:
                   type: string
@@ -201,3 +201,20 @@ paths:
                     description: Url of the dog image
                 '404':
                     description: Dog image not found
+    /dog/getDogWithList?id={id}:
+        parameters:
+            - in: query
+              name: id
+              schema:
+                  type: number[]
+              required: true
+              description: List of the dog id
+        get:
+            tag:
+                - Dog
+            description: get dog info by list of id
+            responses:
+                '200':
+                    description: List of dog info
+                '404':
+                    description: Dog info not found
